<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history_match"
        android:icon="@drawable/ic_history"
        android:title="@string/tab_title_history_match" />

    <item
        android:id="@+id/navigation_top"
        android:icon="@drawable/ic_top"
        android:title="@string/tab_title_top" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_item_shop" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_setting" />

</menu>