<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noSubscriptionView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/no_subscription_background"
        android:clickable="true"
        android:elevation="@dimen/default_elevation"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="@dimen/default_elevation">

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_double"
            android:layout_marginEnd="@dimen/default_margin_double"
            android:gravity="center"
            android:fontFamily="@font/futura_pt_bold"
            android:text="@string/no_subscription_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <com.google.android.material.button.MaterialButton
            style="@style/DefaultButton"
            android:id="@+id/subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_x4"
            android:layout_marginTop="@dimen/default_margin_double"
            android:layout_marginEnd="@dimen/default_margin_x4"
            android:backgroundTint="@color/telegram"
            android:text="@string/subscribe"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empty" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_double"
            android:layout_marginTop="@dimen/default_margin_double"
            android:layout_marginEnd="@dimen/default_margin_double"
            android:gravity="center"
            android:text="@string/no_subscription_content_2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/futura_pt_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subscribe" />

        <com.google.android.material.button.MaterialButton
            style="@style/DefaultButton"
            android:id="@+id/watchVideoAds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_x4"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin_x4"
            android:text="@string/watch_video_ads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>